--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -11,17 +11,30 @@
     >
       {% csrf_token %}
       <div class="form-content">
+        {% for field in form %}
         <div class="form-group">
-          <label for="id_first_name">LABEL</label>
-          <input type="text" name="first_name" maxlength="255" id="id_first_name">
+          <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+          {{ field }}
+          {{ field.errors }}
         </div>
-      </div>
+      {% endfor %}
+    </div>
+
+    {% if form.non_field_errors %}
       <div class="form-content">
         <div class="form-group">
-          <button class="btn" type="submit">Send</button>
+          <div class="message error">
+            {{ form.non_field_errors }}
+          </div>
         </div>
       </div>
+    {% endif %}
 
+    <div class="form-content">
+      <div class="form-group">
+        <button class="btn" type="submit">Send</button>
+      </div>
+    </div>
     </form>
   </div>
 {% endblock content %}
